// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin is true 1`] = `
<div
  className="layout-wrap flex-100 layout-row layout-align-start-stretch"
>
  <div
    className="greyBg layout-padding flex-100 layout-align-start-center"
  >
    <span>
      <b>
        Requested Shipments
      </b>
    </span>
  </div>
  <div
    className=" margin_box_right flex-100
        layout-row layout-wrap padding_bottom"
  >
    <div
      className="flex-100 flex-lg-50 flex-gt-lg-33 layout-row card_padding card_lineup"
    >
      <GreyBox
        borderStyle=""
        content={
          <AdminShipmentCard
            confirmShipmentData={Object {}}
            dispatches={
              Object {
                "foo": [Function],
              }
            }
            hubs={
              Object {
                "foo": Object {
                  "location": Object {
                    "city": "FOO_CITY",
                    "country": "Germany",
                    "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                    "id": 246,
                    "primary": true,
                    "street": "FOO_STREET",
                    "streetNumber": 579,
                    "street_number": 579,
                    "zipCode": "22456",
                    "zip_code": "22456",
                  },
                  "name": "FOO_HUB_NAME",
                },
              }
            }
            shipment={
              Object {
                "cargo_units": Array [
                  Object {
                    "dimension_x": 107,
                    "dimension_y": 63,
                    "dimension_z": 67,
                    "quantity": 2,
                  },
                ],
                "clientName": "FOO_CLIENT_NAME",
                "destination_hub": Object {
                  "name": "FOO_DESTINATION_HUB",
                },
                "id": 654,
                "imc_reference": "FOO_IMC_REFERENCE",
                "origin_hub": Object {
                  "name": "FOO_ORIGIN_HUB",
                },
                "planned_etd": 789,
                "schedule_set": Array [],
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "status": "FOO_STATUS",
                "total_price": Object {
                  "currency": "USD",
                  "value": "200.99",
                },
              }
            }
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        }
        contentClassName="layout-row flex-100"
        flex={0}
        flexGtLg={0}
        flexMd={0}
        fullWidth={false}
        isBox={false}
        padding={false}
        title=""
        titleAction={false}
        wrapperClassName="layout-row"
      />
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="layout-wrap flex-100 layout-row layout-align-start-stretch"
>
  <div
    className="greyBg layout-padding flex-100 layout-align-start-center"
  >
    <span>
      <b>
        Requested Shipments
      </b>
    </span>
  </div>
  <div
    className=" margin_box_right flex-100
        layout-row layout-wrap padding_bottom"
  >
    <div
      className="flex-100 flex-lg-50 flex-gt-lg-33 layout-row card_padding card_lineup"
    >
      <GreyBox
        borderStyle=""
        content={
          <UserShipmentCard
            dispatches={
              Object {
                "foo": [Function],
              }
            }
            shipment={
              Object {
                "cargo_units": Array [
                  Object {
                    "dimension_x": 107,
                    "dimension_y": 63,
                    "dimension_z": 67,
                    "quantity": 2,
                  },
                ],
                "clientName": "FOO_CLIENT_NAME",
                "destination_hub": Object {
                  "name": "FOO_DESTINATION_HUB",
                },
                "id": 654,
                "imc_reference": "FOO_IMC_REFERENCE",
                "origin_hub": Object {
                  "name": "FOO_ORIGIN_HUB",
                },
                "planned_etd": 789,
                "schedule_set": Array [],
                "selected_offer": Object {
                  "cargo": Object {},
                  "total": Object {
                    "value": 77,
                  },
                },
                "status": "FOO_STATUS",
                "total_price": Object {
                  "currency": "USD",
                  "value": "200.99",
                },
              }
            }
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        }
        contentClassName="layout-row flex-100"
        flex={0}
        flexGtLg={0}
        flexMd={0}
        fullWidth={false}
        isBox={false}
        padding={false}
        title=""
        titleAction={false}
        wrapperClassName="layout-row"
      />
    </div>
  </div>
</div>
`;
